# todorust

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
scripts/: tasks.js
src/: api.rs  main.rs  router.rs  routes.rs  task.rs
styles/: input.css
templates/: index.html  input.css  task-modal.html  task-view.html  task.html  tasks.html
templates/buttons/: complete-task_btn.html  delete-task_btn.html  pend-task_btn.html
