[package]
name = "todorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
axum-server = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
